--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               
     <div class="row">
     <div class="col-md-7">
-      <img class="icon" src="//ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png">
+      <img class="icon" src="https://ssl.gstatic.com/onebox/weather/48/thunderstorms.png">
        <strong id="temperature">
             19
         </strong>
