Display forecast Data using api

--- a/index.html
+++ b/index.html
@@ -60,12 +60,25 @@
           <span id="humidity"></span>%
         </li>
         <li>
-            Wind:<span id="wind"></span>Km/h
+            Wind: <span id="wind"></span>Km/h
         </li>
      </ul>
     </div>
 
     <div class="weather-forecast" id="weather-forecast"> 
+      <div class="row">
+        <div class="col-md-2">
+          <div class="weather-forecast-date">
+          Thu
+        </div>
+          <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" alt="" width="36"/>
+          <div class="weather-forecast-temperature">
+           <span class="weather-forecast-temperature">18°</span>|<span class="weather-forecast-temperature-min">12°</span>
+          </div>
+          
+        </div>
+      </div>
+  
       
     </div>
       </div>
