Removal of temp conversion

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   </head>
   <body>
     <div class="container">
-     <div class="weatherApp">
+     <div class="weather-app-wrapper">
+       <div class="weatherApp">
       <form id="search-form">
      <div class="row">
     <div class="col-9">
@@ -51,7 +52,8 @@
             19
         </strong>
         <span id="units">
-          <a href="#" id="cel-link" class="active">℃ </a> | <a href="#" id="fah-link" class="active"> ℉</a></span>
+          <a href="#" id="cel-link" class="active">℃ </a> 
+        </span>
     </div>
 
     <div class = "col-md-5">
@@ -65,7 +67,7 @@
      </ul>
     </div>
 
-    <div class="weather-forecast" id="weather-forecast"> 
+    <div class="weather-forecast" id="weather-forecast">
       <div class="row">
         <div class="col-md-2">
           <div class="weather-forecast-date">
@@ -84,6 +86,7 @@
       </div>
       <small> <a href="https://github.com/VarsharaneeAR/Weather-App">App was coded </a> by V.A.R</small>
       </div>
+    </div>
       </div>
       <script src="src/app.js"></script>
     </body>
